mainBlue color code is changed

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 :root{
   --mainWhite: #f9fbfc;
-  --mainBlue: #203961;
+  --mainBlue: #1A4668;
   --lightBlue: #a2cdb8;
   --mainRed: #e1755e;
   --mainDark: #5d554b;
